fix: enhance CORS configuration and improve error handling in API requests