@@ -1,6 +1,8 @@
 package com.merchantsledger.config;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -17,9 +19,17 @@ public class CorsConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration config = new CorsConfiguration();
-    config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+    List<String> origins = Arrays.stream(allowedOrigins.split(","))
+        .map(String::trim)
+        .filter(origin -> !origin.isBlank() && !origin.contains("YOUR-RENDER-"))
+        .collect(Collectors.toList());
+    if (origins.isEmpty()) {
+      origins = List.of("http://localhost:5173", "http://localhost:3000", "https://*.onrender.com");
+    }
+    config.setAllowedOriginPatterns(origins);
     config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+    config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With"));
+    config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
     config.setAllowCredentials(true);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
